2009-06-15  Corinna Vinschen  <corinna@vinschen.de>

	* net.cc (get_flags): New static function to generate interface flags
	value.
	(get_ipv4fromreg_ipcnt): New static function to fetch number of
	configured IPv4 addresses for a given NIC from registry.
	(get_ipv4fromreg): New static function to fetch configured IPv4
	addresses for a given NIC from registry.
	(get_friendlyname): New static function to generate friendly name.
	(get_hwaddr): New static function to copy hardware address.
	(get_xp_ifs): Restructure slightly.  Add code to generate IPv4 entries
	entries for interfaces which are disconnected.

2009-06-14  Christopher Faylor  <me+cygwin@cgf.cx>

	* errno.cc (errmap): Add mapping for ERROR_IO_INCOMPLETE.
	* fhandler.cc (fhandler_base::fcntl): Fix comment.
	(fhandler_base::wait_overlapped): Accept an optional len parameter.
	Use the len parameter when WriteFile fails with ERROR_IO_PENDING.  Make
	debug output less alarming.
	(fhandler_base::write_overlapped): Pass len to wait_overlapped.
	* fhandler.h (fhandler_base::wait_overlapped): Add an optional argument
	denoting the number of characters intended to be written.

	* fhandler_tty.cc (fhandler_pty_master::close): Don't close archetype
	handles when cygwin is still initializing since the handles aren't
	actually opened at that point.

2009-06-14  Corinna Vinschen  <corinna@vinschen.de>

	* localtime.cc (time2): Take another stab at fixing a compiler warning.

2009-06-14  Christopher Faylor  <me+cygwin@cgf.cx>

	* localtime.cc (time2): Take a stab at fixing a compiler warning.

2009-06-14  Christopher Faylor  <me+cygwin@cgf.cx>

	* fhandler.cc (fhandler_base::wait_overlapped): Honor nonblocking flag
	for writes.  Don't reset event handle when we see a ERROR_IO_PENDING.

	* sigproc.cc (stopped_or_terminated): Use bool constants for
	consistency.

	* wait.cc (wait4): Remove nonsensical comment.

2009-06-13  Corinna Vinschen  <corinna@vinschen.de>
