@@ -1,3 +1,8 @@
+2009-06-16  Christopher Faylor  <me+cygwin@cgf.cx>
+
+	* fhandler.cc (fhandler_base::read_overlapped): Preserve len when
+	looping due to received signal.
+
 2009-06-15  Corinna Vinschen  <corinna@vinschen.de>
 
 	* net.cc (get_flags): New static function to generate interface flags
